[project]
authors = [{ name = "Abhishek Sharma", email = "abhisheks@berkeley.edu" }]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "torch>=2.5.0",
    "scikit-learn>=1.5.2",
    "torchcontrib>=0.0.2",
]
description = "Python implementation of Deep Q Rank Agent."
license = { text = "MIT" }
name = "deep-q-rank"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.7.0",
    "docformatter[tomli]>=1.7.5",
    "better-exceptions>=0.3.3",
    "mypy>=1.12.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
